ChangeLog for python-ly
=======================


2016-??-??: python-ly 0.9.4

- support LilyPond 2.18+ behaviour on \relative without startpitch on
  transpose, rel2abs and abs2rel.
- make define-markup-command recognition working again
- recognize \bookOutputName A (without quotes, although not recommended)
- allow multi-digit fingering, e.g. c-34, LilyPond supports that since at least
  2.16.
- various updates and improvements in MusicXML export contributed by Peter Bjuhr
- added ly-server: an HTTP-server for manipulating LilyPond source, contributed
  by Urs Liska
- fix issue #59: handle \include commands correctly when exporting to MusicXML


2015-12-24: python-ly 0.9.3

- Fix issue #35: do not insert duration after a tie
- Added ly.rhythm.music_items() for a more robust way of iterating through
  chords and notes (awaiting fully fledged editing support through ly.music or
  ly.xml)
- More configurability in ly.colorize, thanks to Urs Liska
- MusicXML export various improvements and bug fixes, contributed by Peter Bjuhr


2015-05-14: python-ly 0.9.2

- add the default-language variable to the ly command; this can be set to a
  language in case a LilyPond document uses a language different than
  "nederlands" but does not specify it (issue #20).
- add the -l, --language option as shorthand for setting the default language
- properly support drum notes in ly.lex and ly.music
- updated scheme variables in ly.data.scheme* functions for LilyPond 2.18
- fix TypeError: expected string or buffer in dom.ly when string was a
  dom.Reference (issue wbsoft/frescobaldi#667)
- Fix issue #16: Duration after `\skip` may not be removed
- MusicXML export improvements:
  - support for isolated durations (a single duration without
    explicit pitch)
  - support for implicit starting pitch in relative mode
    (issues #18 and wbsoft/frescobaldi#648)


2015-03-08: python-ly 0.9.1

- updated LilyPond data to 2.18


2015-03-07: python-ly 0.9