@@ -101,14 +101,20 @@ class ParseSource():
         doc.filename = filename
         self.parse_document(doc)
 
-    def parse_document(self, ly_doc):
-        """Parse the LilyPond source specified as a ly.document document."""
+    def parse_document(self, ly_doc, relative_first_pitch_absolute=False):
+        """Parse the LilyPond source specified as a ly.document document.
+        
+        If relative_first_pitch_absolute is set to True, the first pitch in a
+        \relative expression without startpitch is considered to be absolute
+        (LilyPond 2.18+ behaviour).
+        
+        """
         # The document is copied and the copy is converted to absolute mode to
         # facilitate the export. The original document is unchanged.
         doc = ly_doc.copy()
         import ly.pitch.rel2abs
         cursor = ly.document.Cursor(doc)
-        ly.pitch.rel2abs.rel2abs(cursor)
+        ly.pitch.rel2abs.rel2abs(cursor, first_pitch_absolute=relative_first_pitch_absolute)
         mustree = ly.music.document(doc)
         self.parse_tree(mustree)
 
